--- a/src/markdown/mas/maak_figuren_rapport.Rmd
+++ b/src/markdown/mas/maak_figuren_rapport.Rmd
@@ -1406,3 +1406,28 @@ corrplot(cormat_pearson2, method =  "circle",
 dev.off()
 ```
 
+# Steekproef piloot
+
+```{r}
+plot1 <- png::readPNG(here("media", "steekproefkader_mas",
+                           "mas_piloot_exclusie.png"))
+plot2 <- png::readPNG(here("media", "steekproefkader_mas",
+                           "mas_piloot_paden.png"))
+plot3 <- png::readPNG(here("media", "steekproefkader_mas",
+                           "mas_piloot_punten.png"))
+plot4 <- png::readPNG(here("media", "steekproefkader_mas",
+                           "landgebruik_selectie.png"))
+
+p <- cowplot::plot_grid(grid::rasterGrob(plot1),
+                        grid::rasterGrob(plot2),
+                        grid::rasterGrob(plot3),
+                        grid::rasterGrob(plot4),
+                        ncol = 2,
+                        labels = c("A.", "B.", "C.", "D."))
+
+ggsave(here("media", "steekproefkader_mas", "mas_piloot_afbakening.png"),
+       p,
+       dpi = 300,
+       width = 9,
+       height = 8)
+```
